Fix rendering alignment of search icon
This affected both Gecko & iPad

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -324,7 +324,8 @@ textarea:focus {
   border: none;
   width: 20px;
   height: 20px;
-  background: url('/images/search.png');
+  vertical-align: middle;
+  background: url('/images/search.png') no-repeat;
   cursor: pointer;
 }
 
